--- a/DFC.App.MatchSkills/Views/RemoveSkills/body.cshtml
+++ b/DFC.App.MatchSkills/Views/RemoveSkills/body.cshtml
@@ -11,27 +11,29 @@
     slm.Skills.LoadFrom(Model.Skills);
 }
 
-<govukErrorSummary id="@Model.GetElementId("govukErrorSummary", "ErrorSummary")" hidden="@(!Model.HasError)">
-    <govukErrorSummaryItem href="#@Model.GetElementId("fieldset","radio")" text="Choose skills to remove from your skills list"></govukErrorSummaryItem>
-</govukErrorSummary>
+    <govukErrorSummary id="@Model.GetElementId("govukErrorSummary", "ErrorSummary")" hidden="@(!Model.HasError)">
+        <govukErrorSummaryItem href="#@Model.GetElementId("fieldset","radio")" text="Choose skills to remove from your skills list"></govukErrorSummaryItem>
+    </govukErrorSummary>
 
 <div class="govuk-grid-column-two-thirds">
-    <form action="/matchskills/@CompositeViewModel.PageId.ConfirmRemove.Value" method="post">
-        <div class="govuk-form-group @(Model.HasError ? "govuk-form-group--error" : "")">
+    <div class="govuk-grid-row">
+        <form action="/matchskills/@CompositeViewModel.PageId.ConfirmRemove.Value" method="post">
+            <div class="govuk-form-group @(Model.HasError ? "govuk-form-group--error" : "")">
 
-            <fieldset class="govuk-fieldset" id="@Model.GetElementId("fieldset","radio")">
-                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-                    <govukHeadingH1 Text="Remove skills" />
-                    <span class="govuk-hint">Select the skills you would like to remove.</span>
-                </legend>
-                <govukError text="Choose skills to remove from your skills list" id="@Model.GetElementId("govukError","ErrorMessage")"
-                            hidden="@(!Model.HasError)"></govukError>
-                
-                @await Component.InvokeAsync("SkillsList", slm)
-                
-            </fieldset>
-        </div>
-        <govukButton id="@Model.GetElementId("govukButton","RemoveSelectSkills")" text="Remove selected skills" />
-        <govukButtonLink additional-class="govuk-button--secondary" id="@Model.GetElementId("govukButtonLink", "Cancel")" LinkTitle="Cancel Remove Skills" LinkText="Cancel" LinkHref="@CompositeViewModel.PageId.SkillsBasket"></govukButtonLink>
-    </form>
+                <fieldset class="govuk-fieldset" id="@Model.GetElementId("fieldset", "radio")">
+                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+                        <govukHeadingH1 Text="Remove skills" />
+                        <span class="govuk-hint">Select the skills you would like to remove.</span>
+                    </legend>
+                    <govukError text="Choose skills to remove from your skills list" id="@Model.GetElementId("govukError", "ErrorMessage")"
+                                hidden="@(!Model.HasError)"></govukError>
+
+                    @await Component.InvokeAsync("SkillsList", slm)
+
+                </fieldset>
+            </div>
+            <govukButton id="@Model.GetElementId("govukButton", "RemoveSelectSkills")" text="Remove selected skills" />
+            <govukButtonLink additional-class="govuk-button--secondary" id="@Model.GetElementId("govukButtonLink", "Cancel")" LinkTitle="Cancel Remove Skills" LinkText="Cancel" LinkHref="@CompositeViewModel.PageId.SkillsBasket"></govukButtonLink>
+        </form>
+    </div>
 </div>
