--- a/DFC.App.MatchSkills/Views/Removed/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/Removed/Body.cshtml
@@ -22,7 +22,7 @@
         {
             <govukHeadingH3 text="Your skills list is now empty"></govukHeadingH3>
             <div class="govuk-body">
-                To find career matches, you can <govukLink id="@Model.GetElementId("govukButtonLink", "moreSkills")" Link-Title="add skills" Link-Text="add skills to your list" Link-Href="@CompositeViewModel.PageId.MoreSkills"></govukLink>
+                To find career matches, you can <govukLink id="@Model.GetElementId("govukButtonLink", "moreSkills")" Link-Title="add skills" Link-Text="add skills to your list." Link-Href="@CompositeViewModel.PageId.MoreSkills"></govukLink>
             </div>
         }
         else
