--- a/DFC.App.MatchSkills/Views/EnterSkills/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/EnterSkills/Body.cshtml
@@ -29,11 +29,11 @@
                     <govukListItem text="education"></govukListItem>
                     <govukListItem text="your responsibilities outside of work"></govukListItem>
                 </govukBulletedList>
-                
+
                 <div id="@skillSearchGroup" class="govuk-form-group @(Model.HasError ? "govuk-form-group--error": "")">
 
-                <govukLabel for="@textInputElementName" text="Search for a skill" additional-class="govuk-!-font-weight-bold"></govukLabel>
-                
+                    <govukLabel for="@textInputElementName" text="Search for a skill" additional-class="govuk-!-font-weight-bold"></govukLabel>
+
                     <govukTextInput id="@textInputElementName" additional-class="govuk-input--width-20">
                         <govukHint HintText="You can search for a specific skill (like measuring spirit level) or a skill group (like bricklaying)"></govukHint>
                         <govukTextInputError Id="@textInputError" Text="Enter a skill" hidden="@(!Model.HasError)"></govukTextInputError>
@@ -43,15 +43,19 @@
 
             </form>
         </div>
-        <div class="govuk-grid-column-one-third">
-            <govukHeadingH3 text="Skills you've recently added"></govukHeadingH3>
-            @{
-                var slm = new SkillsListViewModel(Model.Id.Value, SkillsListViewModel.ListItemType.Bullet);
-                slm.Skills.LoadFrom(Model.Skills);
-                slm.BeginSkillsListHTML = "<ul class='govuk-list govuk-list--bullet'>";
-                slm.EndSkillsListHTML = "</ul>";
-            }
-            @await Component.InvokeAsync("SkillsList", slm)
-        </div>
+        @if (Model.Skills.Count > 0)
+        {
+            <div class="govuk-grid-column-one-third">
+                <govukHeadingH3 text="Skills you've recently added"></govukHeadingH3>
+                @{
+                    var slm = new SkillsListViewModel(Model.Id.Value, SkillsListViewModel.ListItemType.Bullet);
+                    slm.Skills.LoadFrom(Model.Skills);
+                    slm.BeginSkillsListHTML = "<ul class='govuk-list govuk-list--bullet'>";
+                    slm.EndSkillsListHTML = "</ul>";
+                }
+                @await Component.InvokeAsync("SkillsList", slm)
+            </div>
+        }
+
     </div>
 </div>
