--- a/DFC.App.MatchSkills/Views/MatchDetails/body.cshtml
+++ b/DFC.App.MatchSkills/Views/MatchDetails/body.cshtml
@@ -1,34 +1,38 @@
 ﻿@model DFC.App.MatchSkills.ViewModels.MatchDetailsCompositeViewModel
-
-<div class="govuk-grid-column-two-thirds">
-    <govukHeadingH1 text="@Model.CareerTitle" additional-class="margin-bottom-reset govuk-!-margin-top-6"></govukHeadingH1>
-    <p>@Model.CareerDescription</p>
-    <section class="job-profile-subsection govuk-!-padding-top-6 govuk-!-margin-bottom-6">
-        <govukHeadingH3 text="Your matching skills: "></govukHeadingH3>
-        <div class="job-profile-subsection-content">
-            <div class="">
-                <p><strong></strong></p>
-                <govukBulletedList>
-                    @foreach (var skill in Model.MatchingSkills)
-                    {
-                        <govukListItem text="@skill"></govukListItem>
-                    }
-                </govukBulletedList>
-            </div>
+<div class="govuk-main-wrapper govuk-main-wrapper--auto-spacing">
+    <div class="govuk-grid-row">
+        <div class="govuk-grid-column-two-thirds">
+            <govukHeadingH1 text="@Model.CareerTitle" additional-class="margin-bottom-reset govuk-!-margin-top-6"></govukHeadingH1>
+            <p>@Model.CareerDescription</p>
+            <section class="job-profile-subsection govuk-!-padding-top-6 govuk-!-margin-bottom-6">
+                <govukHeadingH3 text="Your matching skills: "></govukHeadingH3>
+                <div class="job-profile-subsection-content">
+                    <div class="">
+                        <p><strong></strong></p>
+                        <govukBulletedList>
+                            @foreach (var skill in Model.MatchingSkills)
+                            {
+                                <govukListItem text="@skill"></govukListItem>
+                            }
+                        </govukBulletedList>
+                    </div>
+                </div>
+            </section>
+            <section class="job-profile-subsection govuk-!-padding-top-6 govuk-!-margin-bottom-6">
+                <govukHeadingH3 text="Skills you'll need to gain: "></govukHeadingH3>
+                <div class="job-profile-subsection-content">
+                    <div class="">
+                        <p><strong></strong></p>
+                        <govukBulletedList>
+                            @foreach (var skill in Model.MissingSkills)
+                            {
+                                <govukListItem text="@skill"></govukListItem>
+                            }
+                        </govukBulletedList>
+                    </div>
+                </div>
+            </section>
         </div>
-    </section>
-    <section class="job-profile-subsection govuk-!-padding-top-6 govuk-!-margin-bottom-6">
-        <govukHeadingH3 text="Skills for you to develop: "></govukHeadingH3>
-        <div class="job-profile-subsection-content">
-            <div class="">
-                <p><strong></strong></p>
-                <govukBulletedList>
-                    @foreach (var skill in Model.MissingSkills)
-                    {
-                        <govukListItem text="@skill"></govukListItem>
-                    }
-                </govukBulletedList>
-            </div>
-        </div>
-    </section>
+    </div>
 </div>
+            
