--- a/DFC.App.MatchSkills/Views/Matches/_MatchesCount.cshtml
+++ b/DFC.App.MatchSkills/Views/Matches/_MatchesCount.cshtml
@@ -1,1 +1,1 @@
-﻿@Model.CareerMatches.Count @Model.NounForNumber(Model.CareerMatches.Count, "match", "matches")
+﻿@Model.TotalMatches @Model.NounForNumber(Model.CareerMatches.Count, "match", "matches")
