--- a/DFC.App.MatchSkills/Views/Matches/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/Matches/Body.cshtml
@@ -1,4 +1,5 @@
-﻿@model DFC.App.MatchSkills.ViewModels.MatchesCompositeViewModel
+﻿@using DFC.App.MatchSkills.ViewComponents.Pagination
+@model DFC.App.MatchSkills.ViewModels.MatchesCompositeViewModel
 
 <div class="govuk-width-container">
     <govukHeadingH1 text="@Model.PageHeading"></govukHeadingH1>
@@ -92,38 +93,34 @@
                 <div class="app-results__item">
                     <hr>
                     @*<div class="sort-container govuk-!-margin-bottom-6">
-                        <span><strong>Sort by:</strong></span>
-                        <ul class="sort-list">
-                            <li class="sort-list-item"><a href="#">Match %</a></li>
-                            <li class="sort-list-item"><a href="#">A - Z</a></li>
-                            <li class="sort-list-item"><a href="#">Job sector growth</a></li>
-                        </ul>
-                    </div>*@
+                    <span><strong>Sort by:</strong></span>
+                    <ul class="sort-list">
+                        <li class="sort-list-item"><a href="#">Match %</a></li>
+                        <li class="sort-list-item"><a href="#">A - Z</a></li>
+                        <li class="sort-list-item"><a href="#">Job sector growth</a></li>
+                    </ul>
+                </div>*@
                     <div class="app-long-results list govuk-list govuk-grid-row" id="app-results-list--long">
                         @foreach (var careerMatch in Model.CareerMatches.OrderByDescending(cm => cm.MatchStrengthPercentage))
                         {
                             <partial name="_MatchResult" model="careerMatch" />
                         }
-                        
+
                     </div>
                 </div>
             </div>
-            @*<nav role="navigation" aria-label="Pagination">
-                <div class="pagination__summary">Showing 1 - 5 of 25 results</div>
-                <ul class="previous-next-navigation govuk-!-margin-top-3">
-
-                    <li class="next">
-                        <a href="#">
-                            <span class="pagination-label">Next</span>
-                            <span class="govuk-visually-hidden">page</span>
-                            <span class="page-numbers">2 of 5</span>
-                        </a>
-                    </li>
-                </ul>
-
-
-
-            </nav>*@
+            @{
+                var pagination = new PaginationViewModel()
+                {
+                    NextPage = Model.CurrentPage < Model.TotalPages ? Model.CurrentPage + 1 : (int?)null,
+                    NextPageLink = $"matches?page={Model.CurrentPage + 1}",
+                    PreviousPage = Model.CurrentPage > 1 ? Model.CurrentPage - 1 : (int?)null,
+                    PreviousPageLink = $"matches?page={Model.CurrentPage - 1}",
+                    ShowResultsString = Model.ResultsString,
+                    TotalPages = Model.TotalPages
+                };
+            }
+            <partial name="~/ViewComponents/Pagination/Pagination.cshtml" model="pagination" />
         </div>
     </div>
 </div>
@@ -148,3 +145,4 @@
         </div>
     </div>
 </div>*@
+
