Select All and Clear All

--- a/DFC.App.MatchSkills/ViewComponents/SkillsList/Default.cshtml
+++ b/DFC.App.MatchSkills/ViewComponents/SkillsList/Default.cshtml
@@ -28,7 +28,7 @@ else
         {
             case SkillsListViewModel.ListItemType.Checkbox:
                 var itemId = $"{Model.ItemIdPrefix}-GovukCheckbox-{item.Id}";
-                <govukCheckbox id="@itemId" label="@item.Name" name="@item.Id--@item.Name" AdditionalClass="checkbox-container-item"></govukCheckbox>
+                <govukCheckbox id="@itemId" label="@item.Name" name="@item.Id--@item.Name" AdditionalClass="checkbox-container-item" checked="Model.AllSkillsSelected" ></govukCheckbox>
                 break;
 
             default:
@@ -42,3 +42,4 @@ else
         @Html.Raw(Model.EndSkillsListHTML)
     }
 }
+
