--- a/DFC.App.MatchSkills/Views/SelectSkills/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/SelectSkills/Body.cshtml
@@ -58,4 +58,4 @@
         </div>
     </div>
 </div>
-<script src="https://localhost:44383/js/matchskills.min.js"></script>
+<script defer async src="https://localhost:44383/js/matchskills.min.js"></script>
