--- a/DFC.App.MatchSkills/Views/Matches/_JobSectorGrowth.cshtml
+++ b/DFC.App.MatchSkills/Views/Matches/_JobSectorGrowth.cshtml
@@ -1,5 +1,5 @@
 ﻿@model DFC.App.MatchSkills.Models.CareerMatch
 
-<div class="govuk-!-font-size-14 govuk-clearfix">
+<div class="govuk-!-font-size-14 govuk-clearfix govuk-accordion">
     <strong>Job sector growth:</strong> <em class="embedded-fa-icon fa-arrow-up"></em>@Model.JobSectorGrowthDescription
 </div>
