--- a/DFC.App.MatchSkills/Views/Matches/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/Matches/Body.cshtml
@@ -1,4 +1,6 @@
-﻿@using DFC.App.MatchSkills.ViewComponents.Pagination
+﻿@using DFC.App.MatchSkills.Application.Session.Models
+@using DFC.App.MatchSkills.ViewComponents.Pagination
+@using DFC.App.MatchSkills.ViewModels
 @model DFC.App.MatchSkills.ViewModels.MatchesCompositeViewModel
 
 <div class="govuk-width-container">
@@ -88,20 +90,16 @@
                 </div>
             </div>
         </div>*@
+
+
         <div class="govuk-grid-column-two-thirds app-intro">
             <div class="app-results ">
                 <div class="app-results__item">
                     <hr>
-                    @*<div class="sort-container govuk-!-margin-bottom-6">
-                    <span><strong>Sort by:</strong></span>
-                    <ul class="sort-list">
-                        <li class="sort-list-item"><a href="#">Match %</a></li>
-                        <li class="sort-list-item"><a href="#">A - Z</a></li>
-                        <li class="sort-list-item"><a href="#">Job sector growth</a></li>
-                    </ul>
-                </div>*@
+                    <partial name="_SortOptions" model="Model"/>
+                    
                     <div class="app-long-results list govuk-list govuk-grid-row" id="app-results-list--long">
-                        @foreach (var careerMatch in Model.CareerMatches.OrderByDescending(cm => cm.MatchStrengthPercentage))
+                        @foreach (var careerMatch in Model.CareerMatches)
                         {
                             <partial name="_MatchResult" model="careerMatch" />
                         }
