--- a/DFC.App.MatchSkills/Views/SelectSkills/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/SelectSkills/Body.cshtml
@@ -42,8 +42,7 @@
                             <div class="govuk-inset-text">
                                 <p>
                                     If you want to add a skill that does not appear on the list below, try
-                                    <govukLink id="@Model.GetElementId("govukLink","EnterSkills")" link-href="@CompositeViewModel.PageId.EnterSkills" link-text="searching"></govukLink>
-                                    for it.
+                                    <a id="@Model.GetElementId("govukLink","EnterSkills")" href="@CompositeViewModel.PageId.EnterSkills">searching</a> for it.
                                 </p>
                             </div>
 
