--- a/DFC.App.MatchSkills/Views/RelatedSkills/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/RelatedSkills/Body.cshtml
@@ -1,4 +1,5 @@
 ﻿@using DFC.App.MatchSkills.ViewComponents.SkillsList
+@using DFC.App.MatchSkills.ViewModels
 @model DFC.App.MatchSkills.ViewModels.RelatedSkillsCompositeViewModel
 
 @{
@@ -7,7 +8,8 @@
     var slm = new SkillsListViewModel(Model.Id.Value, SkillsListViewModel.ListItemType.Checkbox)
     {
         BeginSkillsListHTML = "<div class=\"govuk-checkboxes skill-list-container govuk-checkboxes--small dual-checkbox-container\">",
-        EndSkillsListHTML = "</div>"
+        EndSkillsListHTML = "</div>",
+        AllSkillsSelected = Model.AllSkillsSelected
     };
     slm.Skills.LoadFrom(Model.RelatedSkills);
 }
@@ -19,7 +21,7 @@
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
 
-            <form id="@form" action="/matchskills/relatedskills/addskills" method="post">
+            <form id="@form" action="/matchskills/@CompositeViewModel.PageId.RelatedSkills/addskills" method="post">
                 @Html.HiddenFor(x => x.SearchTerm)
                 <div class="govuk-form-group">
                     <fieldset class="govuk-fieldset" id="selectSkills">
@@ -39,6 +41,7 @@
                             }
                             else
                             {
+                                <govukLink id="selectSkillsGovukLinkSkillSelectToggle" link-href="/matchskills/@CompositeViewModel.PageId.RelatedSkills/SkillSelectToggle?toggle=@Model.AllSkillsSelected&searchterm=@Model.SearchTerm" link-text="@(Model.AllSkillsSelected?"Clear all":"Select all")"></govukLink>
                                 @await Component.InvokeAsync("SkillsList", slm)
                             }
 
