--- a/DFC.App.MatchSkills/Views/SelectSkills/Body.cshtml
+++ b/DFC.App.MatchSkills/Views/SelectSkills/Body.cshtml
@@ -52,7 +52,7 @@
                                     <span class="govuk-visually-hidden">Error:</span> Choose skills to add to your skills list
                                 </span>
                             }
-                            <govukLink id="@Model.GetElementId("govukLink","SkillSelectToggle")" link-href="/matchskills/@CompositeViewModel.PageId.SelectSkills/SkillSelectToggle?toggle=@Model.AllSkillsSelected" link-text="@(Model.AllSkillsSelected?"Clear all":"Select all")"></govukLink>
+                            <govukLink id="@Model.GetElementId("govukLink","SkillSelectToggle")" link-href="@Model.CompositeSettings.Path/@CompositeViewModel.PageId.SelectSkills/SkillSelectToggle?toggle=@Model.AllSkillsSelected" link-text="@(Model.AllSkillsSelected?"Clear all":"Select all")"></govukLink>
 
 
                             @await Component.InvokeAsync("SkillsList", slm)
