--- a/DFC.App.MatchSkills/Views/Matches/_SortOptions.cshtml
+++ b/DFC.App.MatchSkills/Views/Matches/_SortOptions.cshtml
@@ -1,11 +1,15 @@
 ﻿@using DFC.App.MatchSkills.Application.Session.Models
 @using DFC.App.MatchSkills.ViewModels
 @model DFC.App.MatchSkills.ViewModels.MatchesCompositeViewModel
-    <p class="govuk-body-s govuk-!-margin-bottom-6">
+@{
+    var alphabeticallyText = Model.CurrentSortBy == SortBy.Alphabetically && Model.CurrentDirection == SortDirection.Ascending ? "Z - A": "A - Z";
+}
+
+<p class="govuk-body-s govuk-!-margin-bottom-6">
         <strong>Sort by:</strong> <govukLink link-href="@CompositeViewModel.PageId.Matches?sortby=@SortBy.MatchPercentage&direction=@Model.GetSortDirection(SortBy.MatchPercentage)"
                            link-text="Match %" id="@Model.GetElementId("govUkLink","Match")"></govukLink>,
         <govukLink link-href="@CompositeViewModel.PageId.Matches?sortby=@SortBy.Alphabetically&direction=@Model.GetSortDirection(SortBy.Alphabetically)" 
-                   link-text="A - Z" id="@Model.GetElementId("govUkLink","Alphabetically")"></govukLink>,
+                   link-text="@alphabeticallyText" id="@Model.GetElementId("govUkLink","Alphabetically")"></govukLink>,
         <govukLink link-href="@CompositeViewModel.PageId.Matches?sortby=@SortBy.JobSectorGrowth&direction=@Model.GetSortDirection(SortBy.JobSectorGrowth)" 
                    link-text="Job sector growth" id="@Model.GetElementId("govUkLink","JobSector")"></govukLink>
     </p>
